--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
     .card { border:1px solid var(--b); border-radius:14px; padding:16px; box-shadow:0 6px 24px rgba(0,0,0,.06) }
     h1 { margin:0 0 10px 0; }
     input[type=password], input[type=text] { width: 260px; padding:8px 10px; border:1px solid var(--b); border-radius:10px; }
-    button { padding:8px 12px; border-radius:10px; border:1px solid var(--b); background:#fff; cursor:pointer }
+    button { padding:8px 12px; border-radius:10px; border:1px solid var(--b); background:#3b0a0a; cursor:pointer }
     button.primary { background: var(--brand); color:#fff; border-color: color-mix(in srgb, var(--brand) 60%, #fff) }
     .row { display:flex; gap:10px; align-items:center; flex-wrap:wrap }
     .tabs { display:flex; gap:8px; margin-top:12px }
