--- a/public/index.html
+++ b/public/index.html
@@ -434,6 +434,28 @@
         </div>
       </div>
 
+      <aside id="bundleCard" class="promo-card">
+  <div class="promo-head">Bundle & Save</div>
+  <div class="promo-body">
+    <div class="promo-price">
+      <span class="big">$20</span> for 5 credits
+    </div>
+    <div class="promo-sub">Only <strong>$4</strong> each</div>
+
+    <ul class="promo-points">
+      <li>Instant access to reports</li>
+      <li>Never expires</li>
+      <li>Best value for regular users</li>
+    </ul>
+
+    <div class="promo-actions">
+      <button id="buy5Sidebar" class="btn-primary">Buy 5 for $20</button>
+      <button id="comparePlans" class="btn-outline">Compare</button>
+    </div>
+  </div>
+</aside>
+
+
       <!-- History -->
       <div class="mt-8">
         <div class="flex items-center justify-between mb-2">
