--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- ✅ SEO Meta -->
     <meta
       name="description"
-      content="Get instant CARFAX & AutoCheck vehicle history reports by VIN or license plate. Fast, secure, and easy — powered by AutoVINReveal."
+      content="Get instant vehicle history reports by VIN or license plate. Fast, secure, and easy — powered by AutoVINReveal."
     />
     <meta
       name="keywords"
@@ -157,13 +157,38 @@
           >
             AutoVINReveal
           </a>
+
+          <!-- ✅ Updated hero text + price line -->
           <p
             class="mt-1 sm:mt-2 text-sm sm:text-base lg:text-lg"
             style="color: var(--muted)"
           >
-            Get instant CARFAX & AutoCheck by VIN or Plate — fast, secure, and
-            clear.
+            Instant vehicle history reports by VIN or license plate. See
+            accidents, title issues, mileage problems, and service records
+            before you buy.
           </p>
+          <p class="mt-1 text-xs sm:text-sm" style="color: var(--muted)">
+            From just <strong>$6</strong> per report. No account required for
+            one-time checks.
+          </p>
+
+          <!-- ✅ Trust bar under hero -->
+          <div
+            class="mt-3 flex flex-wrap gap-3 text-xs sm:text-sm"
+            style="color: var(--muted)"
+          >
+            <div class="flex items-center gap-1">
+              <span>🔒</span
+              ><span>Secure payment via card & PayPal</span>
+            </div>
+            <div class="flex items-center gap-1">
+              <span>⚡</span><span>Reports ready in seconds</span>
+            </div>
+            <div class="flex items-center gap-1">
+              <span>📄</span
+              ><span>Downloadable PDF + shareable link</span>
+            </div>
+          </div>
         </div>
 
         <!-- RIGHT SIDE -->
@@ -224,6 +249,9 @@
               maxlength="17"
               placeholder="e.g., 1C6RD6FT1CS310366"
               class="input"
+              style="text-transform: uppercase"
+              autocomplete="off"
+              inputmode="text"
             />
           </div>
 
@@ -297,12 +325,18 @@
             </div>
             <div>
               <label class="lbl">Plate</label>
-              <input name="plate" placeholder="e.g., 8ABC123" class="input" />
+              <input
+                name="plate"
+                placeholder="e.g., 8ABC123"
+                class="input"
+                autocomplete="off"
+                inputmode="text"
+              />
             </div>
           </div>
 
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-            <div>
+            <div id="typeGroup" class="hidden">
               <label class="lbl">Type</label>
               <select name="type" class="select">
                 <option value="carfax">CARFAX</option>
@@ -355,6 +389,30 @@
         </div>
       </div>
 
+      <!-- ✅ How it works section under form -->
+      <section class="mt-8 grid gap-4 sm:grid-cols-3 text-sm">
+        <div class="card p-4">
+          <div class="text-lg font-semibold mb-1">1. Enter VIN or Plate</div>
+          <p style="color: var(--muted)">
+            We validate your VIN format and match it to the correct vehicle.
+          </p>
+        </div>
+        <div class="card p-4">
+          <div class="text-lg font-semibold mb-1">2. Use a credit</div>
+          <p style="color: var(--muted)">
+            Use a single credit to unlock a full vehicle history report in
+            seconds.
+          </p>
+        </div>
+        <div class="card p-4">
+          <div class="text-lg font-semibold mb-1">3. Download & share</div>
+          <p style="color: var(--muted)">
+            View online, download as PDF, or copy a shareable link for your
+            records.
+          </p>
+        </div>
+      </section>
+
       <!-- Buy Credits Modal (tiers) -->
       <div
         id="buyCreditsModal"
@@ -362,8 +420,12 @@
       >
         <div class="card max-w-sm text-center w-[92%]">
           <h2 class="text-lg font-bold mb-2">Get Credits</h2>
-          <p class="mb-4 text-sm" style="color: var(--muted)">
+          <p class="mb-1 text-sm" style="color: var(--muted)">
             Buy a single credit or save with a 10-pack.
+          </p>
+          <!-- ✅ Clarify what a credit is -->
+          <p class="mb-4 text-xs" style="color: var(--muted)">
+            1 credit = 1 full vehicle history report.
           </p>
           <div class="grid gap-2">
             <button id="buy1Btn" class="btn btn-primary w-full">
@@ -429,32 +491,36 @@
           </div>
 
           <p class="text-xs mt-3" style="color: var(--muted)">
-            Tip: you can also buy credits without signing in 
+            Tip: you can also buy credits without signing in
           </p>
         </div>
       </div>
 
-      
-  <div class="promo-head">Bundle & Save</div>
-  <div class="promo-body">
-    <div class="promo-price">
-      <span class="big">$20</span> for 5 credits
-    </div>
-    <div class="promo-sub">Only <strong>$4</strong> each</div>
+      <!-- Promo sidebar block -->
+      <div class="promo-head">Bundle & Save</div>
+      <div class="promo-body">
+        <div class="promo-price">
+          <span class="big">$20</span> for 5 credits
+        </div>
+        <div class="promo-sub">Only <strong>$4</strong> each</div>
 
-    <ul class="promo-points">
-      <li>Instant access to reports</li>
-      <li>Never expires</li>
-      <li>Best value for regular users</li>
-    </ul>
+        <!-- ✅ Extra explanation in promo -->
+        <p class="mt-1 text-xs" style="color: var(--muted)">
+          Ideal if you're checking multiple cars in a day or week. Credits never
+          expire.
+        </p>
 
-    <div class="promo-actions">
-      <button id="buy5Sidebar" class="btn-primary">Buy 5 for $20</button>
-      <button id="comparePlans" class="btn-outline">Compare</button>
-    </div>
-  </div>
+        <ul class="promo-points">
+          <li>Instant access to reports</li>
+          <li>Never expires</li>
+          <li>Best value for regular users</li>
+        </ul>
 
-
+        <div class="promo-actions">
+          <button id="buy5Sidebar" class="btn-primary">Buy 5 for $20</button>
+          <button id="comparePlans" class="btn-outline">Compare</button>
+        </div>
+      </div>
 
       <!-- History -->
       <div class="mt-8">
@@ -482,12 +548,62 @@
         </div>
       </div>
 
+      <!-- ✅ FAQ Section -->
+      <section class="mt-10 max-w-3xl mx-auto">
+        <h2 class="text-lg font-semibold mb-3">Frequently asked questions</h2>
+
+        <details class="mb-2 card p-3">
+          <summary class="cursor-pointer text-sm font-medium">
+            What’s included in a report?
+          </summary>
+          <p class="mt-2 text-sm" style="color: var(--muted)">
+            Reports typically include title status, major accidents, mileage
+            history, damage records, and some service or maintenance events
+            where available.
+          </p>
+        </details>
+
+        <details class="mb-2 card p-3">
+          <summary class="cursor-pointer text-sm font-medium">
+            Do my credits expire?
+          </summary>
+          <p class="mt-2 text-sm" style="color: var(--muted)">
+            Credits on your account do not expire. Use them anytime you need to
+            check another vehicle.
+          </p>
+        </details>
+
+        <details class="mb-2 card p-3">
+          <summary class="cursor-pointer text-sm font-medium">
+            Do I need an account to use this?
+          </summary>
+          <p class="mt-2 text-sm" style="color: var(--muted)">
+            You can buy a one-time report without signing in. Creating an
+            account lets you store credits and access your report history.
+          </p>
+        </details>
+
+        <details class="mb-2 card p-3">
+          <summary class="cursor-pointer text-sm font-medium">
+            Can I share the report with someone else?
+          </summary>
+          <p class="mt-2 text-sm" style="color: var(--muted)">
+            Yes. After purchase, you can copy a secure share link or download
+            the PDF and send it to a buyer, seller, or mechanic.
+          </p>
+        </details>
+      </section>
+
       <footer class="bg-gray-50 border-t mt-12">
         <div class="max-w-6xl mx-auto px-6 py-12">
           <div class="flex items-center justify-between mb-6">
             <div>
               <h3 class="text-2xl font-bold">Customer Reviews</h3>
               <p class="text-sm text-gray-600">Real customers. Real results.</p>
+              <!-- ✅ Extra trust line -->
+              <p class="text-xs text-gray-500 mt-1">
+                Used by car shoppers and small dealers across North America.
+              </p>
             </div>
             <div class="text-right">
               <div class="text-lg font-semibold">5.0 ★</div>
@@ -496,7 +612,7 @@
           </div>
 
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Repeat this card 5–6 times with real info -->
+            <!-- Review card 1 -->
             <article class="bg-white p-4 rounded shadow-sm flex gap-4">
               <img
                 src="/images/img1.png"
@@ -509,9 +625,17 @@
               <div class="flex-1">
                 <div class="flex items-center justify-between">
                   <div class="text-sm font-medium">Maya S.</div>
-                  <div class="text-xs text-gray-500">2025-09-21</div>
+                  <div class="flex flex-col items-end">
+                    <span class="text-xs text-gray-500">2025-09-21</span>
+                    <span class="text-[10px] text-gray-400"
+                      >Private buyer</span
+                    >
+                  </div>
                 </div>
-                <div class="mt-1 text-yellow-500" aria-label="5 out of 5 stars">
+                <div
+                  class="mt-1 text-yellow-500"
+                  aria-label="5 out of 5 stars"
+                >
                   ★★★★★
                 </div>
                 <p class="mt-2 text-gray-700 text-sm">
@@ -520,10 +644,12 @@
                 </p>
               </div>
             </article>
+
+            <!-- Review card 2 -->
             <article class="bg-white p-4 rounded shadow-sm flex gap-4">
               <img
                 src="/images/img1.png"
-                alt="Maya S.'s photo"
+                alt="Collin P.'s photo"
                 class="w-16 h-16 rounded-full object-cover flex-shrink-0"
                 loading="lazy"
                 width="64"
@@ -532,20 +658,31 @@
               <div class="flex-1">
                 <div class="flex items-center justify-between">
                   <div class="text-sm font-medium">Collin P.</div>
-                  <div class="text-xs text-gray-500">2025-09-10</div>
+                  <div class="flex flex-col items-end">
+                    <span class="text-xs text-gray-500">2025-09-10</span>
+                    <span class="text-[10px] text-gray-400"
+                      >First-time buyer</span
+                    >
+                  </div>
                 </div>
-                <div class="mt-1 text-yellow-500" aria-label="5 out of 5 stars">
+                <div
+                  class="mt-1 text-yellow-500"
+                  aria-label="5 out of 5 stars"
+                >
                   ★★★★★
                 </div>
                 <p class="mt-2 text-gray-700 text-sm">
-                  Saved me like 40 bucks, Thank you will definately Purchase again
+                  Saved me like 40 bucks, thank you — will definitely purchase
+                  again.
                 </p>
               </div>
             </article>
+
+            <!-- Review card 3 -->
             <article class="bg-white p-4 rounded shadow-sm flex gap-4">
               <img
                 src="/images/img1.png"
-                alt="Maya S.'s photo"
+                alt="Laz F.'s photo"
                 class="w-16 h-16 rounded-full object-cover flex-shrink-0"
                 loading="lazy"
                 width="64"
@@ -554,20 +691,30 @@
               <div class="flex-1">
                 <div class="flex items-center justify-between">
                   <div class="text-sm font-medium">Laz F.</div>
-                  <div class="text-xs text-gray-500">2025-08-08</div>
+                  <div class="flex flex-col items-end">
+                    <span class="text-xs text-gray-500">2025-08-08</span>
+                    <span class="text-[10px] text-gray-400"
+                      >Comparing multiple cars</span
+                    >
+                  </div>
                 </div>
-                <div class="mt-1 text-yellow-500" aria-label="5 out of 5 stars">
+                <div
+                  class="mt-1 text-yellow-500"
+                  aria-label="5 out of 5 stars"
+                >
                   ★★★★★
                 </div>
                 <p class="mt-2 text-gray-700 text-sm">
-                  This is way better than paying almost 50 bucks for a report
+                  This is way better than paying almost 50 bucks per report.
                 </p>
               </div>
             </article>
+
+            <!-- Review card 4 -->
             <article class="bg-white p-4 rounded shadow-sm flex gap-4">
               <img
                 src="/images/img1.png"
-                alt="Maya S.'s photo"
+                alt="Eric T.'s photo"
                 class="w-16 h-16 rounded-full object-cover flex-shrink-0"
                 loading="lazy"
                 width="64"
@@ -576,13 +723,21 @@
               <div class="flex-1">
                 <div class="flex items-center justify-between">
                   <div class="text-sm font-medium">Eric T.</div>
-                  <div class="text-xs text-gray-500">2025-10-21</div>
+                  <div class="flex flex-col items-end">
+                    <span class="text-xs text-gray-500">2025-10-21</span>
+                    <span class="text-[10px] text-gray-400"
+                      >Small dealer</span
+                    >
+                  </div>
                 </div>
-                <div class="mt-1 text-yellow-500" aria-label="5 out of 5 stars">
+                <div
+                  class="mt-1 text-yellow-500"
+                  aria-label="5 out of 5 stars"
+                >
                   ★★★★★
                 </div>
                 <p class="mt-2 text-gray-700 text-sm">
-                  Gave me a discount for purchasing in bulk thanks again .
+                  Gave me a discount for purchasing in bulk — thanks again.
                 </p>
               </div>
             </article>
@@ -606,6 +761,21 @@
           >Contact Us</a
         >
       </div>
+    </div>
+
+    <!-- ✅ Mobile sticky CTA (hidden on sm+ screens) -->
+    <div
+      class="fixed bottom-0 left-0 right-0 sm:hidden border-t bg-[color:var(--surface)] px-4 py-3 flex items-center justify-between"
+    >
+      <span class="text-xs" style="color: var(--muted)">
+        Enter a VIN or plate to get started.
+      </span>
+      <button
+        class="btn btn-primary text-xs"
+        onclick="document.querySelector('input[name=vin]')?.focus()"
+      >
+        Start now
+      </button>
     </div>
 
     <!-- Toasts -->
